# audiobook-search

./: .env.example  .gitignore  CANCEL_SETUP.md  DEPLOY.md  DEPLOYMENT_SUMMARY.md  PASSWORD_ISSUE.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: __init__.py  auth.py  downloads.py  queue.py  search.py  status.py
backend/app/services/: download_worker.py  progress_tracker.py
backend/scrapers/: __init__.py  bigaudiobooks.py  fulllengthaudiobooks.py  goldenaudiobook.py  hdaudiobooks.py  tokybook.py  zaudiobooks.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/app/login/: page.tsx
frontend/app/queue/: page.tsx
frontend/components/: Navbar.tsx  QueueItem.tsx  SearchBar.tsx  SearchProgress.tsx  SearchResults.tsx
frontend/lib/: api.ts  sse.ts
